# SwitchOpenShock

./: CMakeLists.txt  Makefile  upload.sh
include/: curl_response.h  openshock.hpp
resources/i18n/en-US/: license.json
resources/xml/activity/: main.xml
resources/xml/tabs/: right_or_wrong.xml  settings.xml  shared.xml  shockers.xml
source/: curl_response.c  main.c  main.cpp  openshock.cpp
source/include/: dialog.hpp  openshock.hpp  utils.hpp
source/include/tab/: right_or_wrong_tab.hpp  settings_tab.hpp  shared_tab.hpp  shockers_tab.hpp
source/src/: curl_response.cpp  dialog.cpp  main.cpp  openshock.cpp  utils.cpp
source/src/tab/: right_or_wrong_tab.cpp  settings_tab.cpp  shared_tab.cpp  shockers_tab.cpp
